--- a/src/pages/list/list.scss
+++ b/src/pages/list/list.scss
@@ -9,3 +9,6 @@ page-list {
     tr, tr td, tr td p{
         max-width:190px;
     }
+.searchbar-md .searchbar-input{
+    background-color: transparent;
+}
